--- a/RM.html
+++ b/RM.html
@@ -145,19 +145,41 @@
       </div>
     </section>
 
-    <!-- EXPERIENCE STATS -->
-    <section data-aos="fade-up">
-      <div class="grid-2">
-        <div class="card"><strong>2+ Years Experience</strong><div class="muted">Solar Design & Battery R&D</div></div>
-        <div class="card"><strong>60+ MW Designed/Documented</strong><div class="muted">Ground‑mounted PV</div></div>
-        <div class="card"><strong>12+ Utility‑scale Projects</strong><div class="muted">Rajasthan & Haryana</div></div>
-        <div class="card"><strong>DISCOM / Grid Compliance</strong><div class="muted">Docs & coordination</div></div>
-      </div>
-    </section>
+    <!-- PROFESSIONAL EXPERIENCE (Detailed) -->
+<section data-aos="fade-up">
+<h2 class="title">Professional Experience</h2>
+
+
+<div class="card" style="margin-bottom:12px;">
+<strong>Sr. Solar Design Engineer — Suntrik Green Energy Pvt. Ltd.</strong>
+<div class="muted">Jul 2024 — Present | Jaipur / Rajasthan Projects</div>
+<ul class="clean">
+<li>Designing MW‑scale Solar PV plants (3MW — 8.48MW) including detailed SLDs, cable sizing, trench layouts, and earthing/LPS systems.</li>
+<li>Preparation of DBR (Design Basis Report), equipment datasheets, and BOQ/BOS optimization for cost‑efficient design.</li>
+<li>Developing AutoCAD execution drawings: module layout, routing plans, inverter station drawings, and string mapping.</li>
+<li>DISCOM submission documentation and grid compliance coordination (CEIG, Net‑metering, and Synchronization approvals).</li>
+<li>Site support: QA/QC checks, inverter placement review, civil‑electrical coordination, and solving execution‑site design conflicts.</li>
+</ul>
+</div>
+
+
+<div class="card" style="margin-bottom:12px;">
+<strong>R&D Engineer — Litpax Technology Pvt. Ltd.</strong>
+<div class="muted">Jul 2023 — Jun 2024 | Gurugram, Haryana</div>
+<ul class="clean">
+<li>Worked on Lithium battery pack R&D (EV & Solar Storage) including battery cell testing, balancing, and pack assembly.</li>
+<li>Assisted in BMS testing, PCB debugging, and validation of protection circuitry.</li>
+<li>Created process SOPs, QA documentation, and test logs for battery performance & safety certification.</li>
+<li>Contributed to prototype pack development, battery welding & insulation process improvement.</li>
+</ul>
+</div>
+
+
+</section>
 
     <!-- MAJOR PROJECTS (SUNTRIK) -->
     <section data-aos="fade-up">
-      <h2 class="title">Major Solar Projects — Suntrik</h2>
+      <h2 class="title">Major Solar Projects — SUNTRIK</h2>
       <div class="grid-2">
         <div class="card"><strong>Ransisar, Rajasthan — 8.48 MWp</strong><div class="muted">Ground‑mounted</div><ul class="clean"><li>Full documentation: layout, stringing, cable routing, BOM & DBR.</li></ul></div>
         <div class="card"><strong>Rampura Matoria, Rajasthan — 6.56 MWp</strong><div class="muted">Ground‑mounted</div><ul class="clean"><li>DC/AC cable schematics, inverter selection, civil coordination.</li></ul></div>
