--- a/RM.html
+++ b/RM.html
@@ -152,12 +152,11 @@
 
 <div class="card" style="margin-bottom:12px;">
 <strong>Sr. Solar Design Engineer — Suntrik Green Energy Pvt. Ltd.</strong>
-<div class="muted">Jul 2024 — Present | Jaipur / Rajasthan Projects</div>
+<div class="muted">Jul 2024 — Present | Sirsa / Haryana Projects</div>
 <ul class="clean">
 <li>Designing MW‑scale Solar PV plants (3MW — 8.48MW) including detailed SLDs, cable sizing, trench layouts, and earthing/LPS systems.</li>
 <li>Preparation of DBR (Design Basis Report), equipment datasheets, and BOQ/BOS optimization for cost‑efficient design.</li>
 <li>Developing AutoCAD execution drawings: module layout, routing plans, inverter station drawings, and string mapping.</li>
-<li>DISCOM submission documentation and grid compliance coordination (CEIG, Net‑metering, and Synchronization approvals).</li>
 <li>Site support: QA/QC checks, inverter placement review, civil‑electrical coordination, and solving execution‑site design conflicts.</li>
 </ul>
 </div>
@@ -165,7 +164,7 @@
 
 <div class="card" style="margin-bottom:12px;">
 <strong>R&D Engineer — Litpax Technology Pvt. Ltd.</strong>
-<div class="muted">Jul 2023 — Jun 2024 | Gurugram, Haryana</div>
+<div class="muted">Jul 2023 — Jun 2024 | Sirsa, Haryana</div>
 <ul class="clean">
 <li>Worked on Lithium battery pack R&D (EV & Solar Storage) including battery cell testing, balancing, and pack assembly.</li>
 <li>Assisted in BMS testing, PCB debugging, and validation of protection circuitry.</li>
@@ -311,3 +310,4 @@
 
 </body>
 </html>
+
