--- a/RM.html
+++ b/RM.html
@@ -312,7 +312,7 @@
   </script>
 
   <!-- WhatsApp Floating Button (Safari/iPhone safe) -->
-  <a href="https://wa.me/919992553859?text=Hi%20Dhramveer%20Joshi"
+  <a href="https://api.whatsapp.com/send?phone=919992553859&text=Hi%20%2ADhramveer%20Joshi%2A"
     aria-label="Chat on WhatsApp"
     style="
       position:fixed;
