Update print statement from 'Hello' to 'Goodbye'

--- a/RM.html
+++ b/RM.html
@@ -209,25 +209,33 @@
     <section data-aos="fade-up">
       <h2 class="title">Education</h2>
       <div class="grid-2">
-        <div class="card"><strong>M.Tech — Electrical Engineering</strong><div class="muted">JCDV, Sirsa — Started 2024</div></div>
         <div class="card"><strong>B.Tech — Electrical Engineering</strong><div class="muted">CDLSIET (CDLU) — 2024 • 67%</div></div>
         <div class="card"><strong>Diploma — Electrical Engineering</strong><div class="muted">Govt. Polytechnic Sirsa — 2020 • 66%</div></div>
       </div>
     </section>
 
     <!-- SKILLS -->
-    <section data-aos="fade-up">
-      <h2 class="title">Skills</h2>
-      <div class="card">
-        <div class="kv">
-          <div class="muted">Design</div><div>SLD, cable sizing & schedules, layouts, earthing & LPS</div>
-          <div class="muted">Tools</div><div>AutoCAD, PVsyst (working knowledge), MS Excel/Word</div>
-          <div class="muted">Docs</div><div>DBR & compliance files, checklists, QA documentation</div>
-          <div class="muted">Coordination</div><div>EPC/civil interface, DISCOM/grid submissions</div>
-          <div class="muted">Battery</div><div>Lithium pack R&D, BMS/PCB testing, validation</div>
-        </div>
-      </div>
-    </section>
+   <section data-aos="fade-up">
+  <h2 class="title">Skills</h2>
+  <div class="card">
+    <div class="kv">
+
+      <!-- Highlighted Top Skill -->
+      <div class="muted" style="font-weight:700; color:#0055ff;">Web Dev</div>
+<div style="font-weight:600;">
+  You're viewing a website I personally built — crafted with patience, effort, and love.
+</div>
+
+
+      <div class="muted">Design</div><div>SLD, cable sizing & schedules, layouts, earthing & LPS</div>
+      <div class="muted">Tools</div><div>AutoCAD, PVsyst (working knowledge), MS Excel/Word</div>
+      <div class="muted">Docs</div><div>DBR & compliance files, checklists, QA documentation</div>
+      <div class="muted">Coordination</div><div>EPC/civil interface, DISCOM/grid submissions</div>
+      <div class="muted">Battery</div><div>Lithium pack R&D, BMS/PCB testing, validation</div>
+
+    </div>
+  </div>
+</section>
 
     <!-- CONTACT -->
     <section id="contact" data-aos="fade-up">
@@ -339,4 +347,5 @@
 
 </body>
 </html>
+
 
